[package]
name = "wscb-atlas"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sdl3-sys.workspace = true
wscb-type.workspace = true
wscb-sdl.workspace = true
