[package]
name = "wscb-text"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wscb-type.workspace = true
sdl3-sys.workspace = true

[lints]
workspace = true
